--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swagger-typescript-codegen",
+  "name": "@1stquad/swagger-typescript-codegen",
   "main": "./lib/codegen.js",
   "version": "1.9.0",
   "description": "A Swagger Codegenerator tailored for typescript.",
